# nutanix_mcp

./: .gitignore  LICENSE  MANIFEST.in  README.md  available_tools.md  inventory.yaml  pyproject.toml  setup.py
.github/workflows/: publish.yml
src/: app.py  client.py  registry.py  requirements.txt  server.py
src/nutanix_mcp/: __init__.py  app.py  cli.py  client.py  credentials.py  registry.py  server.py
src/nutanix_mcp/tools/: inventory.py  move_environments.py  move_plans.py  move_vms.py  pc_alerts.py  pc_categories.py  pc_clusters.py  pc_hosts.py  pc_images.py  pc_networking.py  pc_storage.py  pc_tasks.py  pc_vms.py  pe_alerts.py  pe_cluster.py  pe_cvms.py  pe_hosts.py  pe_images.py  pe_networking.py  pe_ops.py  pe_stats.py  pe_storage.py  pe_vms.py
src/tools/: __init__.py  inventory.py  pc_alerts.py  pc_categories.py  pc_clusters.py  pc_hosts.py  pc_images.py  pc_networking.py  pc_storage.py  pc_tasks.py  pc_vms.py  pe_alerts.py  pe_cluster.py  pe_cvms.py  pe_hosts.py  pe_images.py  pe_networking.py  pe_ops.py  pe_stats.py  pe_storage.py  pe_vms.py
